# coursemap

./: .gitignore  CLAUDE.md  README.md  dockerfile  fly.toml
backend/: app.py  db.py  pyproject.toml  utils.py
frontend/: index.html  package.json
frontend/src/api/: apiClient.ts
frontend/src/components/: ClassMarker.tsx  MapView.tsx  MoveArrows.tsx
frontend/src/hooks/: useUserLocation.ts
frontend/src/types/: index.ts
frontend/src/utils/: distance.ts  time.ts
