[project]
name = "coursemap-backend"
version = "0.1.0"
description = "Backend for a live map of nearby classes using FastAPI and Postgres"
authors = [{ name = "Peter Lin", email = "peter.lin2305@gmail.com" }]
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
requires-python = ">=3.9"

[tool.uv]
